feat: coin api based on todo reward
